actualización Cors 1.1